src/objects/ROI_Order_Information__c/ROI_Order_Information__c.object-meta.xml
<CustomObject>
    <description>Custom Object that mimics a system log of ROI and captures Order Information in SAP for each transaction</description>
    <label>ROI Order Information</label>
    <nameField>
        <displayFormat>ROI-{00000000}</displayFormat>
        <label>ROI Order Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ROI Order Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>