src/objects/ROI_Order_Information__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ROI Order Informations</relationshipLabel>
    <relationshipName>ROI_Order_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>