src/objects/ROI_Order_Information__c/fields/ORDER_PRICE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_PRICE__c</fullName>
    <label>ORDER PRICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>