src/objects/ROI_Order_Information__c/fields/RAI_DAYS__c.field-meta.xml
<CustomField>
    <fullName>RAI_DAYS__c</fullName>
    <label>RAI DAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>