src/objects/ROI_Order_Information__c/fields/Reminder_Email_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Start_Date__c</fullName>
    <label>Reminder Email Start Date</label>
    <type>Date</type>
</CustomField>