src/objects/ROI_Order_Information__c/fields/SI_REMINDER_DAYS__c.field-meta.xml
<CustomField>
    <fullName>SI_REMINDER_DAYS__c</fullName>
    <label>SI_REMINDER DAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>