src/objects/ROI_Order_Information__c/fields/SI_REMINDER_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SI_REMINDER_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SI_REMINDER FLAG</label>
    <type>Checkbox</type>
</CustomField>