src/objects/ROI_Order_Information__c/fields/TEST_FAILURE_NOTE__c.field-meta.xml
<CustomField>
    <fullName>TEST_FAILURE_NOTE__c</fullName>
    <label>TEST FAILURE NOTE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>