src/objects/ROI_Order_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseNumber__c</columns>
    <columns>Work_Stream__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ORDER_PRICE__c</columns>
    <columns>RAI_DAYS__c</columns>
    <columns>SI_REMINDER_DAYS__c</columns>
    <columns>SI_REMINDER_FLAG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>